[gd_scene load_steps=10 format=2]

[ext_resource path="res://Door.png" type="Texture" id=1]
[ext_resource path="res://Sign.png" type="Texture" id=2]
[ext_resource path="res://Fonts/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Components/Door.gd" type="Script" id=4]
[ext_resource path="res://Resources/Interactable.tres" type="Material" id=5]
[ext_resource path="res://Resources/KeyboardFrames.tres" type="SpriteFrames" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=3]
size = 7
outline_size = 2
extra_spacing_top = 6
font_data = ExtResource( 3 )

[node name="Door" type="Area2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 5 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="KeyboardIndicator" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 53.8384, -15.387 )
frames = ExtResource( 6 )
animation = "F"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -47.387 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite"]
margin_left = -31.0
margin_top = -15.0
margin_right = 32.0
margin_bottom = 15.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Office"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
